# hyoexam

./: CMakeLists.txt  README.md  build.bat
assets/: gen_assets.py  gen_icon.py
data/: schedules.json
src/: app.manifest  app.rc  json.hpp  main.cpp  schedule.cpp  schedule.h  settings.cpp  settings.h  time_sync.cpp  time_sync.h  update.cpp  update.h
